; ModuleID = '/home/carl/AnghaBench/freebsd/stand/ficl/amd64/extr_..x86sysdep.c_ficlOutb.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/ficl/amd64/extr_..x86sysdep.c_ficlOutb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ficlOutb(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @stackPopUNS(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @stackPopINT(i32 %11)
  store i64 %12, i64* %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @outb(i32 %13, i64 %14)
  ret void
}

declare dso_local i32 @stackPopUNS(i32) #1

declare dso_local i64 @stackPopINT(i32) #1

declare dso_local i32 @outb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
